[metadata]
name = influxLogger
version = 0.0.1
author = Anton Verbeek
author_email = antonverbeek@gmail.com
description = A small simple logger to send data to an influxDB server asynchronous
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akkoev/influxLogger
project_urls =
    Bug Tracker = https://github.com/akkoev/influxLogger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6